--- a/tarefas-tarefosas/oi.html
+++ b/tarefas-tarefosas/oi.html
@@ -36,7 +36,7 @@
        <div class = "list-tasks">
        </div>
                  <li> Tarefa 1 </li>
-                 <li> Tarefa 1 </1i>
+                 <li> Tarefa 1 </li>
                  <li> Tarefa 1 </li>
             </ul>
      </div>
