--- a/tarefas-tarefosas/oi.html
+++ b/tarefas-tarefosas/oi.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+      <!--Meu CSS-->
+      <link type="text/css" rel="stylesheet" href="css/estilo.css"/>
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,21 +15,20 @@
     <title>Gerenciador de Tarefas</title>
 </head>
 <body>
-    
+  
 <div class="container">
 
-<h1>Texto Aqui</h1>
-
+<h1>Gerenciados de Tarefas</h1>
 
 <div class="row">
  <div class="col s12 m6">
-   <div class="card blue-grey darken-1">
+   <div class="card deep-purple lighten-4 z-depth-4">
      <div class="card-content white-text">
        <div class = "form" >
             <form action = " " method = "get">
                  <label for = "task_name"> </label>
             </form>
-            <ul>
+            <ul class="lista1">
                  <input type = "text" name = "task_name" placeholder = "Nome da Tarefa">
                  <button type = "submit"> Cadastrar </button>
        </div>
@@ -35,14 +36,10 @@
        </div>
        <div class = "list-tasks">
        </div>
-                 <li> Tarefa 1 </li>
-                 <li> Tarefa 1 </li>
-                 <li> Tarefa 1 </li>
+                 <li class="lista"> Tarefa 1 </li>
+                 <li class="lista"> Tarefa 1 </li>
+                 <li class="lista"> Tarefa 1 </li>
             </ul>
-     </div>
-     <div class="card-action">
-       <a href="#">This is a link</a>
-       <a href="#">This is a link</a>
      </div>
    </div>
  </div>
